gccida/c0/print_operand_address
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand_address/src/i386.c:6682:17: error: use of undeclared identifier 'off_8069E2'
fprintf( filea, off_8069E2, scale); 
                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand_address/src/obj/i386.o] Error 1
